--- a/dishmap/src/main/res/layout/activity_chat_listview_item_layout.xml
+++ b/dishmap/src/main/res/layout/activity_chat_listview_item_layout.xml
@@ -69,7 +69,7 @@
                     android:layout_height="wrap_content"
                     android:scaleType="fitStart"
                     android:layout_marginLeft="@dimen/x28"
-                    android:src="@mipmap/left_red_package"
+                    android:src="@mipmap/red_package_png"
                     />
             </RelativeLayout>
 
@@ -104,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/x28"
                     android:scaleType="fitStart"
-                    android:src="@mipmap/right_red_package"
+                    android:src="@mipmap/red_package_png"
                     />
             </RelativeLayout>
 
