--- a/dishmap/src/main/res/layout/activity_expire_coupon.xml
+++ b/dishmap/src/main/res/layout/activity_expire_coupon.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/normal_bg_gray"
+    android:orientation="vertical">
+
     <include
         android:id="@+id/title_layout"
         layout="@layout/title_bar_layout"
@@ -11,20 +14,20 @@
     <include
         android:id="@+id/no_data_layout"
         layout="@layout/no_data_layout"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></include>
+        android:layout_height="match_parent"
+        android:visibility="gone"></include>
 
     <ExpandableListView
         android:id="@+id/activity_expire_coupon_content_elv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/y100"
         android:layout_marginLeft="@dimen/x30"
         android:layout_marginRight="@dimen/x30"
-        android:dividerHeight="0px"
-        android:divider="@null"
         android:childDivider="@null"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:divider="@null"
+        android:dividerHeight="0px">
 
     </ExpandableListView>
 </LinearLayout>
