--- a/dishmap/src/main/res/layout/activity_coupon_detail.xml
+++ b/dishmap/src/main/res/layout/activity_coupon_detail.xml
@@ -33,15 +33,45 @@
             android:paddingLeft="@dimen/x40"
             android:paddingRight="@dimen/x40">
 
-            <TextView
-                android:id="@+id/activity_coupon_detail_left_title_tv"
+            <RelativeLayout
                 android:layout_width="@dimen/x110"
                 android:layout_height="@dimen/x110"
                 android:background="@drawable/white_bg_orange_stroke"
-                android:gravity="center"
-                android:text=""
-                android:textColor="@color/orange_color"
-                android:textSize="@dimen/big_text_size_2" />
+                >
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_centerInParent="true"
+                    android:gravity="center_horizontal">
+
+                    <TextView
+                        android:id="@+id/activity_coupon_detail_left_title_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text=""
+                        android:includeFontPadding="false"
+                        android:textColor="@color/orange_color"
+                        android:textSize="@dimen/big_text_size_2" />
+
+                    <TextView
+                        android:id="@+id/activity_coupon_detail_left_price_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text=""
+                        android:includeFontPadding="false"
+                        android:textColor="@color/orange_color"
+                        android:textSize="@dimen/small_text_size" />
+
+                </LinearLayout>
+
+
+
+            </RelativeLayout>
+
 
 
             <LinearLayout
