--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -46,4 +46,6 @@
     <color name="bg_gray_3">#25292c</color>
 
     <color name="line_gray_1">#E5E5E5</color>
+
+    <color name="green_1">#7983AF</color>
 </resources>
