修改有效期展示

--- a/dishmap/src/main/res/layout/activity_coupon_detail.xml
+++ b/dishmap/src/main/res/layout/activity_coupon_detail.xml
@@ -62,6 +62,7 @@
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text=""
+                        android:visibility="gone"
                         android:includeFontPadding="false"
                         android:textColor="@color/orange_color"
                         android:textSize="@dimen/small_text_size" />
