--- a/dishmap/src/main/res/values/colors.xml
+++ b/dishmap/src/main/res/values/colors.xml
@@ -48,4 +48,6 @@
     <color name="line_gray_1">#E5E5E5</color>
 
     <color name="green_1">#7983AF</color>
+
+    <color name="red_1">#DF9595</color>
 </resources>
