--- a/dishmap/src/main/res/layout/fragment_user_coupon_child_item.xml
+++ b/dishmap/src/main/res/layout/fragment_user_coupon_child_item.xml
@@ -37,13 +37,7 @@
                         android:includeFontPadding="false"
                         android:text="0" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textSize="@dimen/normal_text_size"
-                        android:textColor="@color/orange_color"
-                        android:includeFontPadding="false"
-                        android:text="元" />
+
 
                 </LinearLayout>
 
@@ -129,5 +123,13 @@
         android:src="@mipmap/qr_code_image"/>
 
 
+    <ImageView
+        android:id="@+id/fragment_user_coupon_child_item_flag_icon_Iv"
+        android:layout_width="@dimen/x109"
+        android:layout_height="@dimen/y126"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="@dimen/y10"
+        android:visibility="gone"
+        android:src="@mipmap/no_used_coupon_flag_icon"/>
 
 </RelativeLayout>
