--- a/dishmap/src/main/res/layout/fragment_user_coupon_child_item.xml
+++ b/dishmap/src/main/res/layout/fragment_user_coupon_child_item.xml
@@ -35,6 +35,7 @@
                         android:textSize="@dimen/very_big_text_size_2"
                         android:textColor="@color/orange_color"
                         android:includeFontPadding="false"
+                        android:visibility="gone"
                         android:text="0" />
 
 
@@ -66,18 +67,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/text_gray_design_1"
-                        android:textSize="@dimen/normal_text_size"
-                        android:text="有效期:"/>
+
+
 
                     <TextView
-                        android:id="@+id/fragment_user_coupon_child_item_expire_tv"
+                        android:id="@+id/fragment_user_coupon_child_item_coupon_title_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/x20"
                         android:textColor="@color/text_gray_design_1"
                         android:textSize="@dimen/normal_text_size"
                         android:text="0"/>
@@ -93,10 +89,10 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/text_dark_gray"
                         android:textSize="@dimen/very_small_text_size"
-                        android:text="注意:"/>
+                        android:text="有效期:"/>
 
                     <TextView
-                        android:id="@+id/fragment_user_coupon_child_item_attention_tv"
+                        android:id="@+id/fragment_user_coupon_child_item_expire_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/x20"
