--- a/dishmap/src/main/res/layout/dialog_modify_eat_person_number.xml
+++ b/dishmap/src/main/res/layout/dialog_modify_eat_person_number.xml
@@ -37,7 +37,8 @@
             android:layout_width="@dimen/x174"
             android:layout_height="@dimen/y58"
             android:layout_marginLeft="@dimen/x18"
-            android:text="0"
+            android:hint="0"
+            android:textColorHint="@color/gray"
             android:gravity="center"
             android:textColor="@color/black"
             android:background="@drawable/white_bg_radius_5_with_stroke"
