拆红包添加 loading

--- a/dishmap/src/main/res/layout/progress_layout.xml
+++ b/dishmap/src/main/res/layout/progress_layout.xml
@@ -10,7 +10,8 @@
         android:id="@+id/progress_layout_loading_icon_iv"
         android:layout_width="@dimen/x80"
         android:layout_height="@dimen/x80"
-        android:src="@mipmap/loading_icon"/>
+        android:src="@mipmap/loading_icon"
+        android:visibility="invisible"/>
 
 
 </LinearLayout>
