--- a/dishmap/src/main/res/layout/activity_test.xml
+++ b/dishmap/src/main/res/layout/activity_test.xml
@@ -9,4 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="进店" />
+
+    <Button
+        android:id="@+id/activity_test_connect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="连接" />
 </LinearLayout>
