--- a/dishmap/src/main/res/layout/activity_message_lv_item.xml
+++ b/dishmap/src/main/res/layout/activity_message_lv_item.xml
@@ -10,6 +10,7 @@
         android:gravity="center_vertical">
 
         <ImageView
+            android:id="@+id/activity_message_lv_item_icon_iv"
             android:layout_width="@dimen/x70"
             android:layout_height="@dimen/x70"
             android:layout_centerVertical="true"
