--- a/dishmap/src/main/res/layout/activity_set_user_info.xml
+++ b/dishmap/src/main/res/layout/activity_set_user_info.xml
@@ -55,6 +55,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/y57"
                         android:maxLength="30"
+                        android:enabled="false"
                         android:layout_marginLeft="@dimen/x14"
                         android:textColor="@color/text_gray_5"
                         android:textSize="@dimen/big_text_size"
