修改获取用户信息

--- a/dishmap/src/main/res/layout/activity_set_user_info.xml
+++ b/dishmap/src/main/res/layout/activity_set_user_info.xml
@@ -137,6 +137,7 @@
                         android:layout_height="@dimen/y57"
                         android:layout_marginLeft="@dimen/x14"
                         android:inputType="number"
+                        android:enabled="false"
                         android:textColor="@color/text_gray_5"
                         android:textSize="@dimen/big_text_size"
                         android:background="@color/bg_gray_2"
