--- a/dishmap/src/main/res/layout/activity_set_user_info.xml
+++ b/dishmap/src/main/res/layout/activity_set_user_info.xml
@@ -78,11 +78,12 @@
                         android:textColor="@color/text_gray_5"
                         android:textSize="@dimen/big_text_size"/>
 
-                    <EditText
-                        android:id="@+id/activity_set_user_info_nick_sex_et"
+                    <TextView
+                        android:id="@+id/activity_set_user_info_nick_sex_tv"
                         android:maxLength="1"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/y57"
+                        android:gravity="center_vertical"
                         android:textColor="@color/text_gray_5"
                         android:textSize="@dimen/big_text_size"
                         android:background="@color/bg_gray_2"
@@ -104,11 +105,12 @@
                         android:textColor="@color/text_gray_5"
                         android:textSize="@dimen/big_text_size"/>
 
-                    <EditText
-                        android:id="@+id/activity_set_user_info_nick_birthday_et"
+                    <TextView
+                        android:id="@+id/activity_set_user_info_nick_birthday_tv"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/y57"
                         android:maxLength="30"
+                        android:gravity="center_vertical"
                         android:layout_marginLeft="@dimen/x14"
                         android:textColor="@color/text_gray_5"
                         android:textSize="@dimen/big_text_size"
