修改用户信息修改

--- a/dishmap/src/main/res/layout/activity_set_user_info.xml
+++ b/dishmap/src/main/res/layout/activity_set_user_info.xml
@@ -55,6 +55,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/y57"
                         android:maxLength="30"
+                        android:paddingLeft="@dimen/x5"
                         android:enabled="false"
                         android:layout_marginLeft="@dimen/x14"
                         android:textColor="@color/text_gray_5"
@@ -82,6 +83,7 @@
                         android:id="@+id/activity_set_user_info_nick_sex_tv"
                         android:maxLength="1"
                         android:layout_width="match_parent"
+                        android:paddingLeft="@dimen/x5"
                         android:layout_height="@dimen/y57"
                         android:gravity="center_vertical"
                         android:textColor="@color/text_gray_5"
@@ -110,6 +112,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/y57"
                         android:maxLength="30"
+                        android:paddingLeft="@dimen/x5"
                         android:gravity="center_vertical"
                         android:layout_marginLeft="@dimen/x14"
                         android:textColor="@color/text_gray_5"
@@ -136,6 +139,7 @@
                         android:id="@+id/activity_set_user_info_nick_phone_et"
                         android:maxLength="11"
                         android:layout_width="match_parent"
+                        android:paddingLeft="@dimen/x5"
                         android:layout_height="@dimen/y57"
                         android:layout_marginLeft="@dimen/x14"
                         android:inputType="number"
@@ -164,6 +168,7 @@
                         android:id="@+id/activity_set_user_info_nick_region_et"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/y57"
+                        android:paddingLeft="@dimen/x5"
                         android:maxLength="30"
                         android:layout_marginLeft="@dimen/x14"
                         android:textColor="@color/text_gray_5"
@@ -188,6 +193,7 @@
                     <EditText
                         android:id="@+id/activity_set_user_info_nick_introduce_et"
                         android:maxLength="300"
+                        android:paddingLeft="@dimen/x5"
                         android:layout_width="match_parent"
                         android:layout_height="@dimen/y233"
                         android:layout_marginLeft="@dimen/x14"
