--- a/dishmap/src/main/res/layout/activity_message_lv_item.xml
+++ b/dishmap/src/main/res/layout/activity_message_lv_item.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:includeFontPadding="false"
-                android:text="0"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="@dimen/normal_text_size" />
 
