--- a/dishmap/src/main/res/layout/activity_feedback.xml
+++ b/dishmap/src/main/res/layout/activity_feedback.xml
@@ -54,6 +54,7 @@
             android:layout_height="@dimen/y90"
             android:textColor="@color/black"
             android:padding="3dp"
+            android:digits="0123456789abcdefghijklmnopqrstuvwxyz@ABCDEFGHIJKLMNOPQRSTUVWXYZ"
             android:maxLength="30"
             android:singleLine="true"
             android:textSize="@dimen/big_text_size"
