--- a/dishmap/src/main/res/layout/activity_wechat_login.xml
+++ b/dishmap/src/main/res/layout/activity_wechat_login.xml
@@ -42,6 +42,7 @@
             android:src="@mipmap/login_wechat"/>
 
         <TextView
+            android:id="@+id/activity_wechat_login_to_login_tv"
             android:layout_width="@dimen/x688"
             android:layout_height="@dimen/y89"
             android:textColor="@color/white"
@@ -60,12 +61,14 @@
             android:gravity="center_vertical">
 
             <ImageView
+                android:id="@+id/activity_wechat_login_aggree_iv"
                 android:layout_width="@dimen/x40"
                 android:layout_height="@dimen/x40"
                 android:src="@mipmap/orange_right"
                 />
 
             <TextView
+                android:id="@+id/activity_wechat_login_user_aggreement_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/x24"
