修改退出登录文字描述

--- a/dishmap/src/main/res/layout/fragment_user_mine.xml
+++ b/dishmap/src/main/res/layout/fragment_user_mine.xml
@@ -187,7 +187,7 @@
                 android:layout_marginLeft="@dimen/x30"
                 android:layout_centerVertical="true"
                 android:textColor="@color/text_black"
-                android:text="退出"
+                android:text="退出登录"
                 />
 
             <ImageView
