--- a/dishmap/src/main/res/layout/fragment_user_mine.xml
+++ b/dishmap/src/main/res/layout/fragment_user_mine.xml
@@ -195,6 +195,7 @@
                 android:layout_height="@dimen/y23"
                 android:src="@mipmap/detail_right_arrow"
                 android:layout_alignParentRight="true"
+                android:visibility="invisible"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/x30"
                 />
