--- a/dishmap/src/main/res/layout/activity_user_agreement.xml
+++ b/dishmap/src/main/res/layout/activity_user_agreement.xml
@@ -11,16 +11,26 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/y128"></include>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginLeft="@dimen/y20"
+        android:layout_marginRight="@dimen/y20">
 
-        <TextView
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/text_hint_gray"
-            android:textSize="@dimen/small_text_size"
-            android:text="@string/user_agreement"/>
+            >
 
-    </ScrollView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textColor="@color/text_hint_gray"
+                android:textSize="@dimen/big_text_size"
+                android:text="@string/user_agreement"/>
+
+        </ScrollView>
+    </LinearLayout>
+
 </LinearLayout>
