--- a/dishmap/src/main/res/layout/fragment_user_main.xml
+++ b/dishmap/src/main/res/layout/fragment_user_main.xml
@@ -100,6 +100,7 @@
         android:paddingRight="@dimen/x44"
         android:paddingLeft="@dimen/x50"
         android:paddingBottom="@dimen/x50"
+        android:visibility="gone"
         android:layout_marginTop="@dimen/y60">
 
         <ImageView
